--- a/src/app/features/project/reporting/reporting.component.scss
+++ b/src/app/features/project/reporting/reporting.component.scss
@@ -13,6 +13,7 @@
 .right-column {
   flex: 0 0 60%;
   min-width: 0;
+  padding-right: 24px;
 }
 
 .tabs-card {
